@@ -29,6 +29,9 @@ Test::ReportPrereqs.include[7] = Math::BigFloat
 Test::ReportPrereqs.include[8] = builtin
 Test::ReportPrereqs.include[9] = builtin::Backport
 -remove = Test::Pod::No404s ; some vocabulary class URIs now return 403 Forbidden
+StaticInstall.mode = off
+
+[=inc::CheckConflicts]
 
 [ShareDir]
 dir = share
@@ -46,6 +49,9 @@ builtin::compat = 0.003003
 Class::XSAccessor = 0
 Type::Tiny::XS = 0
 Ref::Util::XS = 0
+
+[Prereqs / DevelopRequires]
+Dist::Zilla::Plugin::Conflicts = 0
 
 [Prereqs::Soften]
 to_relationship = suggests
@@ -65,5 +71,6 @@ JSON::Schema::Modern::Document::OpenAPI = < 0.079     ; error mode; traverse now
 OpenAPI::Modern = < 0.077                             ; ::Result boolean overload
 Mojolicious::Plugin::OpenAPI::Modern = < 0.014        ; ::Result boolean overload
 Test::Mojo::Role::OpenAPI::Modern = < 0.007           ; ::Result boolean overload
+builtin::Backport = <= 0.02                           ; prevents builtin::compat from working (0.02 is latest version; next version may also be bad)
 
 [Test::CheckBreaks]
